# knownothing-creative-rag

./: Dockerfile  Dockerfile.health  LICENSE  MODULAR_UI_GUIDE.md  README.md  add_basic_search_feature.sh  commit_and_stage5.sh  commit_changes.sh  create_readme.sh  debug_server.sh  docker_diagnosis_script.sh  emergency_segfault_diagnosis.sh  final_integration_activator.sh  fix_ai_ping_endpoint.sh  fix_api_endpoints_final.sh  fix_api_prefix_issue.sh  fix_double_api_path.sh  fix_error_patterns_precise.sh  fix_segfault_immediate.sh  fix_stage5_endpoint.sh  gradual_rebuild_plan.sh  implement_stage6.sh  implement_stage6_html.sh  implement_stage6_simple.sh  incremental_feature_builder.sh  launch_streamlit_ui.py  pyproject.toml  stage5_complete_workflow.sh  stage6_cleanup.sh  start_stage6_modular.sh  test_all_stages_fixed.sh  test_extract.txt  test_fantasy_script.txt  test_stage4.sh  test_stage4_final_perfect.sh  test_stage4_success.sh  test_stage5_foundation.sh  test_stage6_final.sh  test_stage6_html.sh  test_stage6_simple.sh
configs/docker/: docker-compose.yml
data/: documents.db
data/chroma_db/: chroma.sqlite3
data/uploads/: 185d9ba5-7085-4355-beb4-6d907829856b.txt  19f8af9f-2d72-4ce6-9a5f-8bd31dbc7a5c.txt  237a7ed3-7e84-4315-b9f7-ba82987c8119.txt  3cc1eeb5-94dc-471e-adcf-58e19a9078b2.txt  4fe75b53-b526-48b3-9c8f-646f627e15f5.txt  5ad6f1cb-68eb-4c12-bd4d-517592420a6e.txt  5bc2a663-616b-47c0-9f5c-6f4c2c37f821.txt  (+5 more)
src/: config.py  main.py  main.py.backup  main.py.before_fix  main.py.broken_backup  main.py.clean_backup  main.py.safe_working_backup
src/api/: ai_ping.py  (+8 more)
(+17 files in other folders)
