[tool.poetry]
name = "creative-rag"
version = "0.1.0"
description = "GPU-accelerated multimodal RAG system"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
python-multipart = "^0.0.9"
torch = "*"
transformers = "*"
sentence-transformers = "*"
pymupdf = "*"
pillow = "*"
redis = "*"
asyncpg = "*"
sqlalchemy = "*"
loguru = "*"
rich = "*"
aiofiles = "^24.1.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
chardet = "^5.2.0"
numpy = "^2.3.0"
chromadb = "^1.0.12"
streamlit = "^1.45.1"
plotly = "^6.1.2"
pandas = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
aiofiles = "^23.2.1"
